reverted movie trailer commented code and fixed title click on mobile

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -43,3 +43,7 @@
 		font-size: 2rem;
 	}
 }
+
+.z-index-1 {
+	z-index: 1;
+}
